2006-09-08 Adam Fedor <fedor@gnu.org>

	* Remove GPuzzle - more up-to-date at Marko's site.

2005-01-13 17:38  Alexander Malmberg  <alexander@malmberg.org>

        * GNUmakefile (SUBPROJECTS): Add ExampleService. Partially fixes
	bug #8161.

2004-11-11  Adam Fedor  <fedor@gnu.org>

	* Classes/NSImage/nsimage.m: Create menu before starting loop
	(patch from Patrick Middleton, Patch #3500).

2004-09-28  Fred Kiefer <FredKiefer@gmx.de>

	* Classes/NSImage/nsimage.m: Use rand() instead of random() as
	this is more portable.
	* Ink/Document.m ([Document -makeWindow]): Set text view to import
	graphics and added vertical ruler.
	* Old/nscombobox.m: Added one more combobox in window.
	
	
2004-09-28  Adam Fedor  <fedor@gnu.org>

	* Classes/NSPanelTest/NSPanelTest.m: Make NSPanelTest an application 
	delegate. Reindent. Fix compiler warnings.
	* Classes/NSPanelTest/GNUmakefile: Don't make NSPanelTest the app class.
	* Classes/NSPanelTest/NSPanelTestInfo.plist: New file.
	* Classes/NSPanelTest/NSPanelTest_main.m: Use normal app startup 
	function.

	* Classes/NSScreenTest/screen_main.m: Fix warning.
	* GPuzzle/BTree.m, GPuzzle/Document.m: Remove unused vars, Fix warnings.
	* GPuzzle/GNUmakefile: Don't define GNUSTEP_MAKEFILES.

2004-04-15  Quentin Mathe <qmathe@club-internet.fr>
	
	* ToolbarExample: Added a demo application for the toolbar
	implementation.
	* ToolbarExample/GNUmakefile: New file
	* ToolbarExample/ToolbarExampleInfo.plist: idem.
	* ToolbarExample/main.m : idem.
	* ToolbarExample/Controller.h: idem.
	* ToolbarExample/Controller.m: idem.
	* ToolbarExample/MiniController.h: idem.
	* ToolbarExample/MiniController.m: idem.
	* ToolbarExample/ToolbarExample.gorm/data.classes: idem.
	* ToolbarExample/ToolbarExample.gorm/objects.gorm: idem.
	* ToolbarExample/SecondWindow.gorm/data.classes: idem.
	* ToolbarExample/SecondWindow.gorm/objects.gorm: idem.
	* ToolbarExample/Images/FileIcon_Directory.tiff: idem.
	* ToolbarExample/Images/RecyclerFull.tiff: idem.